[package]
name = "djanco_ext"
version = "0.1.1"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.57", features = ["full", "extra-traits"] }
anyhow = "1.0.37"

