[package]
name = "djanco_ext"
version = "0.1.2"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.57", features = ["full", "extra-traits"] }
quote = "1.0.9"
anyhow = "1.0.37"
chrono = "0.4.19"
